# cudup

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
commands/: index.html
commands/check/: index.html
commands/install/: index.html
commands/list/: index.html
commands/manage/: index.html
commands/uninstall/: index.html
commands/use/: index.html
docs/: ARCHITECTURE.md  index.md  roadmap.md
docs/commands/: check.md  index.md  install.md  list.md  manage.md  uninstall.md  use.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: extra.css
getting-started/quickstart/: index.html
roadmap/: index.html
search/: search_index.json
src/: main.rs
src/cache/: mod.rs
src/commands/: check.rs  install.rs  list.rs  local.rs  mod.rs  setup.rs  uninstall.rs  use_version.rs
src/commands/manage/: mod.rs  remove.rs  self_update.rs  setup.rs
src/config/: mod.rs
src/cuda/: discover.rs  metadata.rs  mod.rs  version.rs
src/fetch/: download.rs  extract.rs  installer.rs  tasks.rs  utils.rs  verify.rs
src/install/: download.rs  extract.rs  installer.rs  mod.rs  tasks.rs  verify.rs
tests/: basic.rs  install_mock.rs
tests/fixtures/: README.md  cuda_12.4.1_metadata.json  cuda_index.html  cudnn_9.1.0_metadata.json  cudnn_index.html
